fixed line spacing so mobile is fully visible

--- a/resources/style.css
+++ b/resources/style.css
@@ -47,7 +47,7 @@ span {
 .hero-main-wrapper p {
 	width: 30%;
 	margin-right: 3rem;
-	line-height: 2;
+	line-height: 1.75;
 }
 
 .hero-main-wrapper {
